<resources>
    <string name="app_name">SmartSecurity-Manager</string>
    <string name="guide_item_1">引导页1</string>
    <string name="guide_item_2">引导页2</string>
    <string name="guide_item_3">引导页3</string>
    <string name="search">搜索</string>
    <string name="SmartManager">智能安防</string>
    <string name="loginFailed">未登录成功，请检查你的网络设置</string>
    <string name="login">登录</string>
    <string name="noLogin">不登录进入</string>
    <string name="loginAPP">登录平台</string>
    <string name="username">账号</string>
    <string name="password">密码</string>
    <string name="goToRegister">立即注册</string>
    <string name="forget">忘记密码</string>

    <!--MainActivity-->
    <string name="user_name">Pantiy</string>
    <string name="user_state">在线</string>
    <string name="des_userAvatar">用户头像</string>
    <string name="query_hint">搜索</string>
    <string name="device">设备</string>
    <string name="contact">联系人</string>
    <string name="new_friends">新朋友</string>
    <string name="message">消息</string>
    <string name="des_deviceIcon">设备头像</string>
    <string name="device_name">设备名称</string>
    <string name="login_time">登录时间 2015-01-01 12:00</string>
    <string name="device_state">可控制</string>
    <string name="lastMessageTime">17:00</string>
    <string name="findNewDevice">发现新设备</string>
    <string name="slogan">玩转智能设备，发现新生活</string>

    <!--ChatFragment-->
    <string name="send">发送</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">下一步</string>
    <string name="phoneNumber">输入手机号</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="eMail">邮箱</string>
    <string name="account">用户名</string>
    <string name="checkPassword">确认密码</string>
    <string name="Register">注册</string>
    <string name="back">上一步</string>
    <string name="device_contact">设备关联人</string>
    <string name="inform">通知</string>
    <string name="alarm">警报</string>
    <string name="chat">聊天</string>
    <string name="r_success">注册成功</string>
    <string name="newPWD">新密码:</string>
    <string name="checkPWD">确认密码:</string>
    <string name="getCheckNum">获取验证码</string>
    <string name="newContact_zhangshifu">张师傅</string>
    <string name="newContact_message">留言：我们那里一起工作</string>
    <string name="newContact_liyan">李妍</string>
    <string name="newContact_yes">已经同意</string>
    <string name="newContact_no">拒绝</string>
    <string name="newKey">新 密 码：</string>
    <string name="sureKey">确认密码：</string>
    <string name="allowSaveKey">允许保存登录密码</string>
    <string name="addFriend">好友添加需要验证</string>
    <string name="associateDevice">制定设备关联需要验证</string>
    <string name="autoLogin">允许自动登录</string>
    <string name="accountVisible">允许别人看到我的账号</string>
    <string name="receiveStrangerMsg">允许接收陌生人消息</string>
    <string name="realTimeVedioDevice_available">可用</string>
    <string name="realTimeVedioDevice_count">36G/共50G</string>
    <string name="loginId">登录账号：</string>
    <string name="userType">用户类型：</string>
    <string name="phoneIdentify">手机验证码：</string>
    <string name="check">检查</string>
    <string name="nowRegister">立即注册</string>
    <string name="versionUpdate">版本更新</string>
    <string name="introduce">功能介绍</string>
    <string name="help">帮助</string>
    <string name="feedback">反馈</string>
    <string name="support_deviceName">设备名称：</string>
    <string name="support_device">厨房设备</string>
    <string name="latelyNotice">平台最新活动通告：</string>
    <string name="sure">确定</string>
    <string name="nowPlugin">当前插件：</string>
    <string name="nowUpdate">立即更新</string>
    <string name="mainUpdate">主要更新</string>
    <string name="remoteLogin">远程登录</string>
    <string name="loginTime">登录时间</string>
    <string name="authority">权限</string>
    <string name="state">在线</string>
    <string name="checkUpdate">检测更新</string>
    <string name="alarmState">一般警报</string>
    <string name="agree">已经同意</string>
    <string name="delete">删除</string>
    <string name="download">下载</string>
    <string name="update">更新</string>
    <string name="downloadAlarmAttachments">非wifi下载报警附件</string>
    <string name="autoUpdatePlugin">非wifi下自动更新插件</string>
    <string name="autoUpgrade">非wifi下自动升级</string>
    <string name="seeMovie">非wifi情况下观看实时视频</string>
    <string name="autoFindNewDevice">非wifi下自动发现新设备</string>
    <string name="deviceName">设备名称：</string>
    <string name="deviceAlias">设备别名：</string>
    <string name="deleteAllCorrelation">解除所有关联</string>
    <string name="forceAllOffLine">强制全部离线</string>
    <string name="longitude">设备经度:</string>
    <string name="latitude">设备纬度:</string>
    <string name="loginPlatform">可登录平台</string>
    <string name="loginUsername">登录平台用户名:</string>
    <string name="loginPassword">设备登录平台密码:</string>
    <string name="confirmChange">确认修改</string>
    <string name="loginAgain">重新登录</string>
    <string name="currentAssociations">当前关联人数 :</string>
    <string name="maxAssociations">最大关联人数 :</string>
    <string name="selectRelated">选择关联人 :</string>
    <string name="specifiedPermission">指定权限 :</string>
    <string name="leaveWord">留言 :</string>
    <string name="exportAllMsg">导出所有消息</string>
    <string name="emptyAllNotificationMsg">清空所有通知消息</string>
    <string name="emptyAllAnnouncementMsg">清空所有通告消息</string>
    <string name="emptyAllChatMsg">清空所有聊天消息</string>
    <string name="emptyAllAlarmMsg">清空所有报警消息</string>
    <string name="emptyAllMsgRecords">清空所有消息记录</string>
    <string name="maximumCollectionRecord">最大收藏记录数 200</string>
    <string name="deviceBarCode">设备条形码:</string>
    <string name="deviceAddress">设备地址:</string>
    <string name="deviceAuthority">设备权限:</string>
    <string name="deviceId">设备ID:</string>
    <string name="logPassword">登录密码:</string>
    <string name="localDirectLogin">本地直接登录</string>
    <string name="edit">编辑</string>
    <string name="changePassword">修改密码</string>
    <string name="chatFile">聊天文件</string>
    <string name="chatLog">聊天记录</string>
    <string name="emptyChatMessages">清空聊天信息</string>
    <string name="shieldThisPerson">屏蔽此人</string>
    <string name="earliestChatTime">最早聊天时间</string>
    <string name="kitchenFittings">厨房设备</string>
    <string name="devicePlugIn">设备插件：</string>
    <string name="equipmentBarcode">设备条码：</string>
    <string name="networkAddress">网络地址：</string>
    <string name="deviceAliases">设备别名：</string>
    <string name="equipmentAuthority">设备权限：</string>
    <string name="addPacket">添加分组</string>
    <string name="newMessagesToAlertSounds">新消息提醒声音</string>
    <string name="newNewsAlertShock">新消息提醒震动</string>
    <string name="notificationLightFlashing">通知时指示灯闪烁</string>
    <string name="noChatMessagesAreDisplayed">不显示聊天消息</string>
    <string name="noNotificationMessage">不提示通告消息</string>
    <string name="allConnectedPersons">所有关联人</string>
    <string name="accepter">接收者 ：</string>
    <string name="addId">添加账号</string>
    <string name="exitNowId">退出当前账号</string>
    <string name="deleteNowId">注销当前账号</string>
    <string name="loginSetting">登录设置</string>
    <string name="unableLogin">无法登录?</string>
    <string name="newAccountRegister">新用户注册</string>
    <string name="deviceIdentifier">设备标识符 :</string>
    <string name="ipAddress">IP地址 ：</string>
    <string name="applyAssociate">申请关联</string>
    <string name="applyAuthority">申请权限 ：</string>
    <string name="loginAccountName">登录用户名：</string>
    <string name="cancel">取消</string>
    <string name="name">姓名：</string>
    <string name="contactSex">性别：</string>
    <string name="nowState">当前状态：</string>
    <string name="addContactTime">添加联系人时间：</string>
    <string name="group">分组：</string>
    <string name="elseName">别名：</string>
    <string name="twoDimensionCode">二维码：</string>
    <string name="sendMessage">发消息</string>
    <string name="Id">账号：</string>
    <string name="pleaseInputId">请输入账号...</string>
    <string name="cellphoneNumber">手机号码：</string>
    <string name="pleaseInputPhoneNumber">请输入手机号码...</string>
    <string name="identifyingCode">验证码：</string>
    <string name="clickInputIdentifyingCode">点击输入验证码</string>
    <string name="type">类型:</string>
    <string name="requestTime">请求时间：</string>
    <string name="contactName">联系人名称：</string>
    <string name="refuse">拒绝</string>
    <string name="congratulateSuccessFindKey">恭喜你，成功找回密码。</string>
    <string name="returnLogin">返回登录界面</string>
    <string name="nextStep">下一步</string>
    <string name="email">邮箱：</string>
    <string name="key">密码</string>
</resources>
