<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/login_container">

    <TextView
        android:id="@+id/tv_networkInfo"
        android:layout_width="match_parent"
        android:layout_height="18dp"
        android:background="@color/colorAccent"
        android:text="@string/loginFailed"
        android:textColor="@android:color/black" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/loginAPP"
                android:textSize="26dp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/username"
                android:textSize="26dp" />

            <EditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/password"
                android:textSize="26dp" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_loginApp"
        android:layout_width="320dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/clr_pressed"
        android:text="@string/login"/>

    <Button
        android:id="@+id/btn_noLogin"
        android:layout_width="320dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/clr_pressed"
        android:text="@string/noLogin"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/btn_gotoRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/goToRegister"
            android:textColor="@android:color/holo_blue_dark"/>

        <TextView
            android:id="@+id/btn_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="208dp"
            android:text="@string/forget"
            android:textColor="@android:color/holo_blue_dark"/>
    </LinearLayout>
    <Button
        android:id="@+id/login_plat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="登录平台" />

    <Button
        android:id="@+id/lan_find"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="局域网发现" />

    <Button
        android:id="@+id/login_dev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="登录设备" />

    <Button
        android:id="@+id/file_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="发送文件" />

    <Button
        android:id="@+id/app_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="退出" />

    <TextView
        android:id="@+id/show_devinf"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="发现的前端设备：" />

</LinearLayout>
