<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/account_editText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/setbar_bg"
            android:hint="账号/手机号/邮箱"
            android:paddingLeft="15dp"/>

        <EditText
            android:id="@+id/password_editText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/setbar_bg"
            android:hint="@string/password"
            android:paddingLeft="15dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_marginTop="20dp"
        android:layout_width="320dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:background="#66CCFF"
        android:text="@string/login"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/unableLogin_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unableLogin"
            android:textColor="#66CCFF"
            android:textSize="15sp"
            android:layout_marginLeft="30dp"/>
        <TextView
            android:id="@+id/newAccountRegister_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newAccountRegister"
            android:textColor="#66CCFF"
            android:textSize="15sp"
            android:layout_marginLeft="180dp"/>
    </LinearLayout>
</LinearLayout>